java_library(
    name = "stub",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        "@grpc_java_maven//:com_google_code_findbugs_jsr305",
        "@grpc_java_maven//:com_google_errorprone_error_prone_annotations",
        "@grpc_java_maven//:com_google_guava_guava",
        "@grpc_java_maven//:com_google_j2objc_j2objc_annotations",
    ],
)

# javax.annotation.Generated is not included in the default root modules in 9,
# see: http://openjdk.java.net/jeps/320.
java_library(
    name = "javax_annotation",
    neverlink = 1,  # @Generated is source-retention
    visibility = ["//visibility:public"],
    exports = ["@grpc_java_maven//:org_apache_tomcat_annotations_api"],
)
