load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "stub",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.errorprone:error_prone_annotations"),
        artifact("com.google.guava:guava"),
        artifact("org.codehaus.mojo:animal-sniffer-annotations"),
    ],
)

# javax.annotation.Generated is not included in the default root modules in 9,
# see: http://openjdk.java.net/jeps/320.
java_library(
    name = "javax_annotation",
    neverlink = 1,  # @Generated is source-retention
    visibility = ["//visibility:public"],
    exports = [artifact("org.apache.tomcat:annotations-api")],
)
