load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "testing",
    testonly = 1,
    srcs = glob([
        "src/main/java/io/grpc/testing/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        "//inprocess",
        "//stub",
        "//util",
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.guava:guava"),
        artifact("com.google.j2objc:j2objc-annotations"),
        artifact("com.google.truth:truth"),
        artifact("junit:junit"),
    ],
)
