load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "testing",
    testonly = 1,
    srcs = glob([
        "src/main/java/io/grpc/testing/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        "//inprocess",
        "//stub",
        "//util",
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.truth:truth",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "junit:junit",
            repository_name = "grpc_java_maven",
        ),
    ],
)
