java_library(
    name = "util",
    srcs = glob([
        "src/main/java/io/grpc/util/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core:internal",
        "@grpc_java_maven//:com_google_code_findbugs_jsr305",
        "@grpc_java_maven//:com_google_guava_guava",
        "@grpc_java_maven//:com_google_j2objc_j2objc_annotations",
        "@grpc_java_maven//:org_codehaus_mojo_animal_sniffer_annotations",
    ],
)
