load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "util",
    srcs = glob([
        "src/main/java/io/grpc/util/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core:internal",
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "org.codehaus.mojo:animal-sniffer-annotations",
            repository_name = "grpc_java_maven",
        ),
    ],
)
